tests/error/unresolved_array_in_struct.c
// fail "Undeclared identifier."

struct{
    struct unresolved a[4];
};
